stylesheet.less
/* ... */
blockquote {
  background: lighten(@color-swatch5,20%);
  margin:0;
  padding: 20px;
  quotes:"\201C""\201D""\2018""\2019";
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight:@font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  border-radius: 3px;
}

blockquote:before {
  font-family: georgia;
  color: @font-swatch5-color;
  content:open-quote;
  font-size:4em;
  line-height:.1em;
  margin-right:.1em;
  vertical-align:-.4em;
  top: 24px;
  left: 2px;
}

/* ===============================
   BLOG
   =============================== */

.blog-post-feature-image-wrap {
	line-height: 0;
	background-size: cover;
	background-position: center;
	border: 1px solid @color-swatch2;
	width: 100%;
	height: 250px;
	margin-bottom: 10px;
	img {
		display: none;
	}
}

.blog-post-item {
	padding-bottom: 20px;
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

.blog-search-form {
	label {
		display: block;
	}
}

/* ===============================
   MENU
   =============================== */

.menu-item-image-wrap {
	width: 100%;
	height: 200px;
	border: 1px solid @color-swatch2;
	background-size: cover;
	background-position: center;
	img {
		display: none;
	}
}

.menu .menu-items li.menu-item-promoted {
	padding: 8px 14px;
	background: fadeout(@color-swatch2, 90%);
}

.menu-item-nutritional-title {
	color: darken(@color-swatch2, 25%);	
}
.dietary-icon {
	color: darken(@color-swatch2, 25%);
	text-decoration: underline;
}

.menu-subsection {
	background: fadeout(@color-swatch2, 90%);
}


/* ===============================
   CUSTOM CSS
   =============================== */

.main {
  padding: 40px 0;
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}

/* DEAFULT PAGE TYPES */

.bk-pt-default .bk-header {
  border-bottom: 1px solid lighten(@color-swatch5,15%);
}

.bk-pt-default .extendednavigation ul li:hover > ul {
  border: 1px solid lighten(@color-swatch5,22%);
  padding: 0;
}

.bk-pt-default .main {
  padding: 40px 0;
}

/* ===============================
   HEADER
   =============================== */

.bk-header {
  padding: 0;
  background-color: @color-swatch7;
}

.companyheader {
  display: block;
  float: left;
  padding: 20px 0px 18px;
  width: 25%;
}

/* COMPANY NAME */

.widget.companyname {
  display: block;
  float: left;
  margin-top: 8px;
}

.widget.companyname a {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch1-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
}

.widget.companyname a:hover {
  cursor: pointer;
  text-decoration: none;
}

/* LOGO */

.widget.logo {
  display: block;
  float: left;
  margin-right: 10px;
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
  padding: 4em 0;
  background-color: lighten(@color-swatch4,2%);
  min-height: 150px;
  color: @color-swatch1;
}

.bk-footer h1, .bk-footer h2, footer h3, .bk-footer h4 {
  color: @color-swatch1;
  padding-bottom: 20px;
}

.bk-footer p {
  font-family: @font-swatch5-font-family;
  color: lighten(@color-swatch5,10%);
  line-height:@font-swatch5-line-height;
  padding-bottom: 20px;
}

.bk-footer span {
  color: @color-swatch1;
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget.extendednavigation {
  float: right;
  position: relative;
  width: 75%;
  margin: 20px 0;
}

.widget.extendednavigation a.pull {
  top:-58px;
}

.widget.extendednavigation ul {
  margin: 0;
  padding: 0;
}

.widget.extendednavigation ul li {
  float: left;
  display: block;
  border: none;
}

.widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
  display: block;
  padding: 12px 22px;
  font-family:@font-swatch6-font-family;
  font-size:@font-swatch6-font-size;
  font-weight: @font-swatch6-font-weight;
  color: @font-swatch6-color;
  line-height:@font-swatch6-line-height;
  letter-spacing: @font-swatch6-letter-spacing;
}

.widget.extendednavigation ul li a:hover, .widget.extendednavigation ul li.folder .text:hover {
  color: @font-swatch6-color-hover;
  text-decoration: none;
}

/* FOLDER */

.widget.extendednavigation ul li.folder {
  margin-right: 16px;
  //background-image: image('/images/arrow-down.png');
  background-position: right center;
  background-repeat: no-repeat;
  cursor: pointer;
}

.widget.extendednavigation ul li.folder .text:hover {
  color: @color-swatch3;
}

/* DROPDOWN MENU */

.widget.extendednavigation li > ul {
  display: none;
}

.widget.extendednavigation li:hover > ul {
  display: block;
  width: 46%;
  position: absolute;
  background-color: @color-swatch7;
  /*border: 1px solid lighten(@color-swatch5,35%);*/
  box-shadow: 5px 5px 0px rgba(110, 110, 110, 0.2);
  border-top: 0;
  z-index: 500;
  padding: 14px 0;
  margin: 0;
}

.widget.extendednavigation li:hover > ul > li {
  display: block;
  width: 100%;
  padding: 0 30px 0;
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
  box-sizing: border-box;         /* Opera/IE 8+ */
}

.widget.extendednavigation li:hover > ul > li > a {
  display: block;
  color: @color-swatch5;
  padding: 0;
}


.widget.extendednavigation ul li:hover > ul li .text {
  padding: 0;
  background-image: image('/images/arrow-left.png');
  background-position: left center;
  background-repeat: no-repeat;
}


/* ===============================
   FEATURE
   =============================== */

 .widget.feature {

}

.widget.feature .feature-bgimg {
  height: 500px; /* should be in media query*/
 }

.widget.feature .content {
  height: 500px;
  text-align: center;
}
/* ... */

